refactor(vul): severity 枚举化——String 改 VulSeverityEnum，DB 默认大写
- VulSeverityEnum: 精简，保留 fromNucleiSeverity，删 fromDbValue
- VulTemplate 实体: String severity → VulSeverityEnum severity
- VulTemplateVO / VulTemplatePageVO Response: severity 改枚举
- VulTemplatePageVO Request: 保持 String（API 输入）
- VulTemplateServiceImpl: 删除 VALID_SEVERITIES 常量，normalizeSeverity 改为枚举方法
- DDL: severity 默认值 UNKNOWN，注释改为大写